<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/linear_layout_marginHorizontal">

    <!--Daily Reminder Time -->
    <TextView
        android:id="@+id/dailyReminderTimeTextView"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_marginTop="@dimen/settings_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothambook"
        android:text="@string/dailyReminderTime" />

    <Button
        android:id="@+id/reminderTime"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminderTime"
        android:textAllCaps="false"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/datepickerbutton"
        android:fontFamily="@font/gothambook"
        android:onClick="onReminderTimeClick"/>


    <!--Distance Search -->
    <TextView
        android:id="@+id/distanceSearchTextView"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_marginTop="@dimen/settings_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothambook"
        android:text="@string/distanceInMiles" />
    <EditText
        android:id="@+id/distanceSearch"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:fontFamily="@font/gothambook"
        android:hint="@string/distanceSearch"/>

    <!--Gender  -->
    <TextView
        android:id="@+id/genderTextView"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_marginTop="@dimen/settings_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothambook"
        android:text="@string/gender" />
    <!-- Gender Radio Button -->
    <RadioGroup
        android:id="@+id/radioGenderGroup"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothambook"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothambook"
            android:text="@string/radio_female" />
    </RadioGroup>


    <!--Privacy  -->
    <TextView
        android:id="@+id/privacyTextView"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_marginTop="@dimen/settings_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothambook"
        android:text="@string/privacy" />
    <!-- Public or Private  Radio buttons-->
    <RadioGroup
        android:id="@+id/radioPrivacyGroup"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothambook"
            android:text="@string/radio_private" />

        <RadioButton
            android:id="@+id/radioPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothambook"
            android:text="@string/radio_public" />
    </RadioGroup>


    <!-- Age Range-->
    <TextView
        android:id="@+id/ageRangeTextView"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_marginTop="@dimen/settings_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothambook"
        android:text="@string/age_range" />
    <Spinner
        android:id="@+id/spinnerAgeRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Submit button-->
    <Button
        android:id="@+id/saveSettingsId"
        android:layout_marginHorizontal="@dimen/profile_marginHorizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_button"
        android:text="@string/save_settings"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/gothambook"
        android:onClick="onSaveSettings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/button_textSize"/>

</LinearLayout>