...
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/channing_tatum" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="@dimen/card_title_width"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/matchListFragmentContainer"
            android:layout_alignParentBottom="true"
            app:fontFamily="@font/gothambook"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latitudeValueNetwork"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/favorite_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
...
